--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/puente.html"
-    },
-    {
-      "source": "/puente",
-      "destination": "/puente.html"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "api/*.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/(.*)", "dest": "/public/puente.html" }
   ]
 }
