--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
-    { "src": "/(.*)", "dest": "/public/puente.html" }
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
