--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
-    { "src": "/(.*)", "dest": "/api/index.js" }
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/api/r"
+    }
   ]
 }
