--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "public/**", "use": "@vercel/static" },
+    { "src": "api/**/*.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "^/$", "dest": "/puente.html" },
-    { "src": "^/puente$", "dest": "/puente.html" },
-    { "src": "^/api/(.*)$", "dest": "/api/$1.js" }
+    { "src": "^/$", "dest": "/public/puente.html" },
+    { "src": "^/puente$", "dest": "/public/puente.html" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
